--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.11",
@@ -31,10 +33,13 @@
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
+    "react-native-paper-grid": "^0.1.12",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-super-grid": "^5.0.0",
+    "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10"
   },
