--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-super-grid": "^5.0.0",
     "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
