--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
+    "expo-image-picker": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "install": "^0.13.0",
@@ -35,15 +37,13 @@
     "react-native-paper": "^5.8.0",
     "react-native-paper-grid": "^0.1.12",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-super-grid": "^5.0.0",
     "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
-    "expo-image-picker": "~14.1.1",
-    "@react-native-community/datetimepicker": "6.7.3"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
