--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
     "icon": "./assets/logo.png",
     "userInterfaceStyle": "#87ceeb",
     "splash": {
-      "image": "./assets/logo.png",
+      "image": "./assets/logo1.png",
       "resizeMode": "contain",
-      "backgroundColor": "#87ceeb"
+      "backgroundColor": "white"
     },
     "assetBundlePatterns": [
       "**/*"
